data/list.css
/* 
 *  Created by Martin Giger
 *  Licensed under the MPL 2.0
 */

html, body {
    height: 100%;
}

body {
    padding: 0;
    margin: 0;
    font-family: sans-serif;
    line-height: 1.2em;
    
    -moz-user-select: none;
}

ul {
    margin: 0;
    padding: 0;
}

a {
    margin: 0;
}


.toolbar li, .tabstrip li {
    display: inline;
    list-style-type: none;
}


.tabstrip {
    padding: 0;
    margin: 0;
    background: #2c24c5;
}

.tabstrip a:link, .tabstrip a:hover, .tabstrip a:active, .tabstrip a:visited,
.toolbar a:link, .toolbar a:hover, .toolbar a:active, .toolbar a:visited {
    color: white;
    text-decoration: none;
    display: inline-block;
    padding:.5em;
}

.tabstrip a.current, .toolbar a:hover, .toolbar a:active {
    background: #497dfe;
}

.toolbar {
    position: absolute;
    margin: 0;
    padding: 0;
    
    top: 0;
    right: 0;
}

.tabcontent {
    padding: 0;
    margin: 0;
}

.tabcontent li {
    padding: 0;
    margin: 0;
    list-style: none;
}

.tabcontent li a, .tabcontent li a:link, .tabcontent li a:hover, .tabcontent li a:active, .tabcontent li a:visited {
    text-decoration: none;
    color: initial;
    cursor: context-menu;
    display: block;
}

.compact li a, .default li a, #offline.thumbnail li a, #live.thumbnail li div, #nochannels, #noonline {
    padding: .3em;
}

.tabcontent li div img {
    margin-right: .3em;
    float: left;
}

.compact li a>img, .default li a>img, #offline li a>img {
    display: none;
    visibility: hidden;
}

.compact li a {
    min-height: 1em;
}

.compact li div img {
    vertical-align: text-bottom;
    width: 1em;
    height: 1em;
}

.default li a, .thumbnail li a {
    min-height: 30px;
}

#live.thumbnail li a>img {
    width: 100%;
    display: block;
}

#live.thumbnail li {
    position: relative;
    width: 100%;
}

#live.thumbnail li div {
    position: absolute;
    width: 100%;
    bottom: 0;
}

.compact li .title  {
    display: none;
    visibility: hidden;
}

#offline .title {
    display: none;
    visibility: hidden;
}

.default li div img, .thumbnail li div img {
    width: 30px;
    height: 30px;
    vertical-align: middle;
}

.hidden {
    display: none;
    visibility: hidden;
}

/* Type specific styles */
.twitch a:hover, .thumbnail .twitch a:hover div {
    background: #7550BA !important;
    color: white !important;
}

#live.thumbnail .twitch  a div {
    background: rgba(117, 80, 186, 0.7);
    color: white;
}

